<resources>
    <string name="app_name">TickTock</string>
    <string name="timer_separator">:</string>
    <string name="current_activities">Current Activities:</string>
    <string name="up_next">Up Next:</string>
    <string name="groups_change_in">Groups Change In</string>
    <string name="pause">pause</string>
    <string name="activity_paused">Activity Paused</string>
    <string name="stop">stop</string>
    <string name="zero_zero">00</string>
    <string name="one">1</string>
    <string name="resume">resume</string>
    <string name="pause_drill">Pause Drill</string>
    <string name="resume_end">Resume/End Drill</string>
    <string name="end_practice">END PRACTICE</string>
    <string name="play_drill">Play Drill</string>
    <string name="zeros">00</string>
</resources>