<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.TimerActivity">

    <com.swolfand.ticktock.widgets.ExpandableLayout
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/highlighter"
        app:expanded="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:expanded="true">

        <TextView
            android:id="@+id/action_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/activity_paused"
            android:textAllCaps="true"
            android:textColor="@color/raspberry"
            android:textSize="16sp" />

    </com.swolfand.ticktock.widgets.ExpandableLayout>

    <View
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/banner" />

    <TextView
        android:id="@+id/timer_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center"
        android:text="@string/groups_change_in"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/background"
        app:layout_constraintEnd_toEndOf="@id/background"
        app:layout_constraintStart_toStartOf="@id/background"
        app:layout_constraintTop_toTopOf="@id/background"
        tools:text="Groups Change In" />

    <TextView
        android:id="@+id/hour"
        style="@style/TimerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero_zero"
        app:layout_constraintEnd_toStartOf="@id/separator"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timer_label" />

    <TextView
        android:id="@+id/separator"
        style="@style/TimerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/open_sans_extrabold"
        android:text="@string/timer_separator"
        app:layout_constraintEnd_toStartOf="@id/minutes"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/hour"
        app:layout_constraintTop_toBottomOf="@id/timer_label" />

    <TextView
        android:id="@+id/minutes"
        style="@style/TimerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero_zero"
        app:layout_constraintEnd_toStartOf="@id/separator2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/separator"
        app:layout_constraintTop_toBottomOf="@id/timer_label" />

    <TextView
        android:id="@+id/separator2"
        style="@style/TimerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/timer_separator"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@id/seconds"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/minutes"
        app:layout_constraintTop_toBottomOf="@id/timer_label" />

    <TextView
        android:id="@+id/seconds"
        style="@style/TimerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero_zero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/separator2"
        app:layout_constraintTop_toBottomOf="@id/timer_label" />

    <TextView
        android:id="@+id/current_activity_label"
        style="@style/ActivityLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/current_activities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/background" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/current_activity_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_activity_label"/>

    <View
        android:id="@+id/activity_separator_1"
        style="@style/ActivityDivider"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_activity_recycler" />

    <TextView
        android:id="@+id/next_activity_label"
        style="@style/ActivityLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/up_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_separator_1" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/next_activity_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="18dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/next_activity_label"
        tools:listitem="@layout/item_activity"/>

    <View
        android:id="@+id/activity_separator_2"
        style="@style/ActivityDivider"
        android:layout_width="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/next_activity_recycler" />

    <TextView
        android:id="@+id/play_pause_label"
        style="@style/ActivityLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_separator_2"
        tools:text="Play Drill" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/play_button"
        android:layout_width="@dimen/play_button_width"
        android:layout_height="@dimen/play_button_height"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        android:focusable="true"
        android:insetLeft="@dimen/zero_inset"
        android:insetTop="@dimen/zero_inset"
        android:insetRight="@dimen/zero_inset"
        android:insetBottom="@dimen/zero_inset"
        android:textColor="@color/white"
        app:cornerRadius="1000dp"
        app:icon="@drawable/ic_play_arrow"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/zero_inset"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/play_pause_label"
        tools:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/pause_button"
        android:layout_width="@dimen/play_button_width"
        android:layout_height="@dimen/play_button_height"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:insetLeft="@dimen/zero_inset"
        android:insetTop="@dimen/zero_inset"
        android:insetRight="@dimen/zero_inset"
        android:insetBottom="@dimen/zero_inset"
        android:textColor="@color/white"
        android:visibility="gone"
        app:cornerRadius="1000dp"
        app:icon="@drawable/ic_pause"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/zero_inset"
        app:iconSize="48dp"
        app:iconTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/play_pause_label"
        app:strokeColor="@color/colorPrimary"
        app:strokeWidth="4dp"
        tools:visibility="gone" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/resume_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="resume_button, stop_button" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/resume_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/transparent"
        android:clickable="true"
        android:contentDescription="@string/resume"
        android:focusable="true"
        android:src="@drawable/ic_play_arrow"
        app:backgroundTint="@color/colorPrimary"
        app:borderWidth="6dp"
        app:elevation="0dp"
        app:fabCustomSize="70dp"
        app:layout_constraintEnd_toStartOf="@id/stop_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/play_pause_label"
        app:maxImageSize="40dp"
        app:tint="@color/colorPrimary" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/spacing_standard"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        android:contentDescription="@string/resume"
        android:focusable="true"
        android:src="@drawable/ic_stop"
        app:borderWidth="0dp"
        app:elevation="0dp"
        app:fabCustomSize="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/resume_button"
        app:layout_constraintTop_toBottomOf="@id/play_pause_label"
        app:maxImageSize="40dp"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>